SERVER-113247 Fix commit sequence protocol for change stream readers in reshardCollection (#44494)

GitOrigin-RevId: 0faabf49a74baa755cd49cd023aa382b7703089b